# agent-sync

./: .gitignore  AGENT_GUIDE.md  CLAUDE.md  CRUSH.md  README.md  agent-sync.opam  dune-project
.github/workflows/: release.yml
lib/: cli.ml  cli.mli  config.ml  config.mli  dune  link_manager.ml  link_manager.mli  project.ml  project.mli  registry.ml  registry.mli
test/: dune  test_agent_sync.ml  test_config_load.ml  test_project.ml
